[bindings] remove @@iterator from Window

Window is now exempt from the WebIDL policy granting
@@iterator to Array-like objects, as of a recent change to the Window
specification (https://html.spec.whatwg.org/#window) --- due to the
indexed getter being removed, and handled in WindowProxy instead (https://github.com/whatwg/html/commit/acae3df652b382e9f4f1d1b4dc7e08e2b00df821)

BUG=593174, 538558
LOG=N
R=yukishiino@chromium.org, haraken@chromium.org

Review URL: https://codereview.chromium.org/1778773002

Cr-Commit-Position: refs/heads/master@{#381464}

Former-commit-id: 02a0abbbdb24780320afc40d02c3114b1045b8e0